tests/scale_codec_ui/codec_discriminiant_variant_counted_in_default_index.stderr
error[E0080]: evaluation of constant value failed
 --> tests/scale_codec_ui/codec_discriminiant_variant_counted_in_default_index.rs:1:10
  |
1 | #[derive(::parity_scale_codec::Decode, ::parity_scale_codec::Encode)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'Found Variants that have duplicate indexes. Use different indexes for each variant.
List of variants:
    Index for variant `A` is `1`
    Index for variant `B` is `1usize`
', $DIR/tests/scale_codec_ui/codec_discriminiant_variant_counted_in_default_index.rs:1:10
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::core::panic` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
 --> tests/scale_codec_ui/codec_discriminiant_variant_counted_in_default_index.rs:1:40
  |
1 | #[derive(::parity_scale_codec::Decode, ::parity_scale_codec::Encode)]
  |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'Found Variants that have duplicate indexes. Use different indexes for each variant.
List of variants:
    Index for variant `A` is `1`
    Index for variant `B` is `1usize`
', $DIR/tests/scale_codec_ui/codec_discriminiant_variant_counted_in_default_index.rs:1:40
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::core::panic` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
 --> tests/scale_codec_ui/codec_discriminiant_variant_counted_in_default_index.rs:8:10
  |
8 | #[derive(::parity_scale_codec::Decode, ::parity_scale_codec::Encode)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'Found Variants that have duplicate indexes. Use different indexes for each variant.
List of variants:
    Index for variant `A` is `1usize`
    Index for variant `B` is `1usize`
', $DIR/tests/scale_codec_ui/codec_discriminiant_variant_counted_in_default_index.rs:8:10
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::core::panic` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
 --> tests/scale_codec_ui/codec_discriminiant_variant_counted_in_default_index.rs:8:40
  |
8 | #[derive(::parity_scale_codec::Decode, ::parity_scale_codec::Encode)]
  |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'Found Variants that have duplicate indexes. Use different indexes for each variant.
List of variants:
    Index for variant `A` is `1usize`
    Index for variant `B` is `1usize`
', $DIR/tests/scale_codec_ui/codec_discriminiant_variant_counted_in_default_index.rs:8:40
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::core::panic` (in Nightly builds, run with -Z macro-backtrace for more info)
